<resources>
    <string name="app_name">Sqlite</string>
    <string name="select_operation">İşlem Seçiniz</string>
    <string name="delete">Sil</string>
    <string name="edit">Düzenle</string>
    <string name="hint_name">Adınız...</string>
    <string name="hint_surname">Soyadınız...</string>
    <string name="hint_username">Kullanıcı Adınız...</string>
    <string name="hint_password">Şifreniz...</string>
    <string name="hint_birthday">Doğum Tarihiniz :</string>
    <string name="hint_birthday_choose">Seçim Yapınız...</string>
    <string name="list">LİSTELE</string>
    <string name="save">KAYDET</string>
    <string name="update">Güncelle</string>
    <string name="cancel">İptal</string>
</resources>
